@@ -26,6 +26,7 @@ Version CVS HEAD (?)
   * made sure the instruments menu is updated when instruments are
     added, removed or renamed
   * fixed name entry field in instrument properties window
+  * use character encoding Windows-1252 for all strings in gig files
 
 Version 0.2.0 (2009-07-31)
 
